--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,6 +2,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" href="/images/site/icon.png">
+    <link rel="icon" href="../images/site/favicon-32x32.png" type="image/x-icon">
     <title><%  title %> | CS340 Project</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
